
OPTION(ORAIFUTILS_NREG2D3D_BUILD_EXAMPLES "Build NReg2D/3D example applications." OFF)

# source directories
SET(ORAIFUTILS_NREG2D3D_MATHS_SUBDIR ${ORAIFUTILS_NREG2D3D_SUBDIR}/maths CACHE INTERNAL "")
SET(ORAIFUTILS_NREG2D3D_DRRENGINE_SUBDIR ${ORAIFUTILS_NREG2D3D_SUBDIR}/drrengine CACHE INTERNAL "")
SET(ORAIFUTILS_NREG2D3D_INTERPOLATION_SUBDIR ${ORAIFUTILS_NREG2D3D_SUBDIR}/interpolation CACHE INTERNAL "")
SET(ORAIFUTILS_NREG2D3D_TRANSFORM_SUBDIR ${ORAIFUTILS_NREG2D3D_SUBDIR}/transform CACHE INTERNAL "")
SET(ORAIFUTILS_NREG2D3D_METRIC_SUBDIR ${ORAIFUTILS_NREG2D3D_SUBDIR}/metric CACHE INTERNAL "")
SET(ORAIFUTILS_NREG2D3D_ALGORITHM_SUBDIR ${ORAIFUTILS_NREG2D3D_SUBDIR}/algorithm CACHE INTERNAL "")
SET(ORAIFUTILS_NREG2D3D_EXAMPLES_SUBDIR ${ORAIFUTILS_NREG2D3D_SUBDIR}/examples)

# MathMethods library
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/${ORAIFUTILS_NREG2D3D_MATHS_SUBDIR})

# DRREngine library
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/${ORAIFUTILS_NREG2D3D_DRRENGINE_SUBDIR})

# Interpolation library
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/${ORAIFUTILS_NREG2D3D_INTERPOLATION_SUBDIR})

# Transform library
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/${ORAIFUTILS_NREG2D3D_TRANSFORM_SUBDIR})

# Metric library
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/${ORAIFUTILS_NREG2D3D_METRIC_SUBDIR})

# Algorithm library 
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/${ORAIFUTILS_NREG2D3D_ALGORITHM_SUBDIR})

# Examples
IF (ORAIFUTILS_NREG2D3D_BUILD_EXAMPLES)
  ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/${ORAIFUTILS_NREG2D3D_EXAMPLES_SUBDIR})
ENDIF (ORAIFUTILS_NREG2D3D_BUILD_EXAMPLES)

