
OPTION(ORAIFUTILS_NREG2D3D_BUILD_EXAMPLES "Build NReg2D/3D example applications." OFF)

# source directories
SET(ORAIFUTILS_NREG2D3D_MATHS_SUBDIR ${ORAIFUTILS_NREG2D3D_SUBDIR}/maths CACHE INTERNAL "")
SET(ORAIFUTILS_NREG2D3D_DRRENGINE_SUBDIR ${ORAIFUTILS_NREG2D3D_SUBDIR}/drrengine CACHE INTERNAL "")
SET(ORAIFUTILS_NREG2D3D_INTERPOLATION_SUBDIR ${ORAIFUTILS_NREG2D3D_SUBDIR}/interpolation CACHE INTERNAL "")
SET(ORAIFUTILS_NREG2D3D_TRANSFORM_SUBDIR ${ORAIFUTILS_NREG2D3D_SUBDIR}/transform CACHE INTERNAL "")
SET(ORAIFUTILS_NREG2D3D_METRIC_SUBDIR ${ORAIFUTILS_NREG2D3D_SUBDIR}/metric CACHE INTERNAL "")
SET(ORAIFUTILS_NREG2D3D_ALGORITHM_SUBDIR ${ORAIFUTILS_NREG2D3D_SUBDIR}/algorithm CACHE INTERNAL "")
SET(ORAIFUTILS_NREG2D3D_EXAMPLES_SUBDIR ${ORAIFUTILS_NREG2D3D_SUBDIR}/examples)

# MathMethods library
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/maths)

# DRREngine library
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/drrengine)

# Interpolation library
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/interpolation)

# Transform library
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/transform)

# Metric library
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/metric)

# Algorithm library 
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/algorithm)

# Examples
IF (ORAIFUTILS_NREG2D3D_BUILD_EXAMPLES)
  ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/examples)
ENDIF (ORAIFUTILS_NREG2D3D_BUILD_EXAMPLES)
